# atc-router

./: .cirun.yml  .env  .gitignore  .luacheckrc  .releaserc  BUILD  BUILD.bazel  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  Makefile  README.md  WORKSPACE  busted  cbindgen.toml  rust_clippy.sarif  rust_clippy_5891847e59202b0a8393d08f227f8507b126147c.sarif  sbom.spdx.json  valgrind.suppress
.github/: dependabot.yml
.github/workflows/: auto-assignee.yml  bazel.yml  bench.yml  code-quality.yml  lint.yml  lualint.yml  package.yaml  release-plz.yml  release.yaml  release.yml  sast.yml  sca.yml  semgrep.yml  tests.yml
benches/: Cargo.toml  atc_benchmark.rs  build.rs  change_route.rs  data.json  expression_parsing.rs  iter.rs  match.rs  match_int.rs  match_mem.rs  match_mix.rs  match_string.rs  misc_match.rs  not_match_int.rs  not_match_mix.rs  not_match_string.rs  ref_or_owned_schema.rs  regex_queries.rs  router_bench.rs  simple.rs  string.rs  test.rs  worst_case.rs
cargo/: BUILD.bazel  README.md  crates.bzl  deps.bzl  rust.bzl
cargo/remote/: BUILD.aho-corasick-0.7.20.bazel  BUILD.block-buffer-0.10.3.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.cidr-0.2.1.bazel  BUILD.cpufeatures-0.2.5.bazel  BUILD.crypto-common-0.1.6.bazel  BUILD.digest-0.10.6.bazel  BUILD.generic-array-0.14.6.bazel  BUILD.lazy_static-1.4.0.bazel  BUILD.libc-0.2.138.bazel  BUILD.once_cell-1.16.0.bazel  BUILD.pest-2.5.1.bazel  BUILD.pest_consume-1.1.3.bazel  BUILD.pest_consume_macros-1.1.0.bazel  BUILD.pest_derive-2.5.1.bazel  BUILD.pest_generator-2.5.1.bazel  BUILD.pest_meta-2.5.1.bazel  BUILD.proc-macro2-1.0.47.bazel  BUILD.quote-1.0.21.bazel  BUILD.regex-1.7.0.bazel  BUILD.regex-syntax-0.6.28.bazel  BUILD.sha1-0.10.5.bazel  BUILD.syn-1.0.105.bazel  BUILD.thiserror-1.0.37.bazel  BUILD.thiserror-impl-1.0.37.bazel  BUILD.typenum-1.16.0.bazel  BUILD.ucd-trie-0.1.5.bazel  BUILD.unicode-ident-1.0.5.bazel  BUILD.uuid-1.2.2.bazel  BUILD.version_check-0.9.4.bazel
crates/atc_router_prefilter/: Cargo.toml  README.md
crates/atc_router_prefilter/benches/: github_paths.txt  router_bench.rs
crates/atc_router_prefilter/src/: inner_prefilter.rs  lib.rs  matchers.rs
examples/: regex.rs  regex_queries.rs  simple.rs  simple_queries.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: compare_parser.rs
fuzz/fuzz_targets/pest_parser/: atc_grammar.pest  mod.rs
lib/go-atc-router/: atc-router.go  atc-router.h  atc-router_test.go  go.mod  go.sum
lib/resty/router/: cdefs.lua  context.lua  debug.lua  dirty.lua  router.lua  schema.lua
scripts/: update-ffi-cdefs.sh  update_github_urls_for_bench.sh
spec/: 01-change-route.lua
src/: ast.rs  ast_tests.rs  atc_grammar.pest  cir.rs  context.rs  dirty.rs  ffi.rs  inner_prefilter.rs  inner_prefilter_btree.rs  inner_prefilter_fst.rs  interpreter.rs  lib.rs  line.rs  linear.rs  lir.rs  main.rs  matchers.rs  parser.rs  repo.rs  router.rs  schema.rs  semantics.rs  tests.rs  wasm.rs
src/ffi/: context.rs  debug.rs  expression.rs  mod.rs  router.rs  schema.rs
src/indexes/: mod.rs
t/: 01-sanity.t  02-bugs.t  02-gc.t  02-operators.t  03-contains.t  04-rawstr.t  05-equals.t  06-validate.t  07-in_notin.t  08-equals.t  09-not.t  10-get-results.t  10-prefilter.t  11-iter.t
