load("@rules_rust//rust:defs.bzl", "rust_shared_library")
load("@atc_router_crate_index//:defs.bzl", "aliases", "all_crate_deps")

filegroup(
    name = "all_srcs",
    srcs = glob(
        include = [
            "src/**",
            "Cargo.toml",
            "Cargo.lock",
        ],
        exclude = [
            "*.bazel",
        ],
    ),
)

filegroup(
    name = "lualib_srcs",
    srcs = glob([
        "lualib/**/*.lua",
        "lib/**/*.lua",
    ]),
    visibility = ["//visibility:public"],
)

rust_shared_library(
    name = "atc_router",
    srcs = [":all_srcs"],
    aliases = aliases(),
    crate_features = [
        "default",
        "ffi",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    rustc_flags = [
        "--codegen=strip=symbols",
    ],
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)
