[package]
name = "router_prefilter"
version = "0.1.0"
edition = "2024"

[dependencies]
regex-syntax = "0.8"
roaring = "0.11"
bstr = "1.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand = "0.9.2"
regex = "1.12.2"

[[bench]]
name = "router_bench"
harness = false

[profile.samply]
inherits = "release"
debug = true
