[package]
name = "atc-router"
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Datong Sun <datong.sun@konghq.com>", "Kong Contributors"]
description = """
Versatile DSL based rule matching engine used by the Kong API Gateway
"""
repository = "https://github.com/Kong/atc-router"
keywords = ["dsl", "atc", "router", "rule", "engine"]
categories = ["compilers"]

[dependencies]
pest = "2.7"
pest_derive = "2.7"
cidr = "0.3"
lazy_static = "1.5"
uuid = "1.8"
regex = "1"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_regex = { version = "1.1", optional = true }
fnv = "1"
bitflags = { version = "2.6" }

[dev-dependencies]
criterion = "0"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = ["ffi"]
ffi = []
serde = ["cidr/serde", "bitflags/serde", "dep:serde", "dep:serde_regex"]


[[bench]]
name = "build"
harness = false

[[bench]]
name = "match_mix"
harness = false
