[package]
name = "atc_router_prefilter"
version = "1.3.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Fast prefix-based prefiltering for router pattern matching. Kong's fork of router_prefilter."
categories = ["data-structures"]
keywords = ["router", "routing", "prefilter", "http", "performance"]
authors = ["Zachary Dremann <dremann@gmail.com>"]
repository = "https://github.com/Kong/atc-router"

[dependencies]
regex-syntax = "0.8"
bstr = "1.12"

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }
rand = "0.10.0"
regex = "1.12.2"

[[bench]]
name = "router_bench"
harness = false
